...
        Goal.maintain => 'Just track',
      };
}

extension SexLabel on Sex {
  String get label => switch (this) {
        Sex.male => 'Male',
        Sex.female => 'Female',
        Sex.other => 'Other',
      };
}

extension DietLabel on DietPreference {
...
